# HammerTestTask

./: .gitignore  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  web.dockerfile
api/: urls.py
api/v1/users/: serializers.py  urls.py  views.py
core/: celery.py  settings.py
nginx/servers/: site.conf
users/: admin.py  models.py  tasks.py  utils.py
web/core/: settings.py
web/users/: models.py  utils.py
web/users/migrations/: 0001_initial.py
